Práctica 3 - soluciones parciales

--- a/Practica3.qmd
+++ b/Practica3.qmd
@@ -49,7 +49,7 @@ Estas son las variables que contiene el fichero (se han eliminado alguna del fic
 | `weight`   | Weight (pounds)                        |
 | `frame`    | Body frame size (small, medium, large) |
 | `bp.1s`    | First Systolic Blood Pressure (mmHg)   |
-| `pb.1d`    | First Diastolic Blood Pressure (mmHg)  |
+| `bp.1d`    | First Diastolic Blood Pressure (mmHg)  |
 | `waist`    | Waistline (inches)                     |
 | `hip`      | Hip measurement (inches)               |
 
@@ -72,99 +72,93 @@ head(diabetes)
 
 ## 1.1. Contrasta al nivel de significación 0.05 si el nivel medio de colesterol en los hombres del condado de Buckingham es superior a 200. Justifica si puedes asumir normalidad
 
-```{r include=FALSE, eval=TRUE}
-library(PASWR2)
+Sea X="Nivel de colesterol de los hombres del condado de Buckingham (mg/dL)".
+
+El contraste que debemos realizar ($\alpha=0.05$) se escribe como:
+
+\begin{eqnarray*}
+\begin{array}{rl}
+H_0: & \mu=200 \\
+H_1: & \mu>200 \\
+\end{array}
+\end{eqnarray*}
+
+En primer lugar seleccionamos los datos de la muestra:
+
+```{r include=TRUE}
+pos <- which(diabetes$gender=="male" & diabetes$location=="Buckingham")
+chol.manB <- diabetes$chol[pos]
 ```
 
-<!-- Sea X="Nivel de colesterol de los hombres del condado de Buckingham (mg/dL)". -->
+Comprobamos la condición de normalidad (test de Shapiro-Wilks):
 
-<!-- El contraste que debemos realizar ($\alpha=0.05$) se escribe como: -->
+```{r include=TRUE, message=FALSE}
+library(PASWR2)
+eda(chol.manB)
+```
 
-<!-- \begin{eqnarray*} -->
-<!-- \begin{array}{rl} -->
-<!-- H_0: & \mu=200 \\ -->
-<!-- H_1: & \mu>200 \\ -->
-<!-- \end{array} -->
-<!-- \end{eqnarray*} -->
+Realizamos el test (paramétrico) para una media:
 
-<!-- En primer lugar seleccionamos los datos de la muestra: -->
+```{r, include=TRUE}
+t.test(chol.manB, mu=200, alternative="greater")
+```
 
-<!-- ```{r include=TRUE} -->
-<!-- pos <- which(diabetes$gender=="male" & diabetes$location=="Buckingham") -->
-<!-- chol.manB <- diabetes$chol[pos] -->
-<!-- ``` -->
+Como p-valor$=0.23>\alpha=0.05 \Rightarrow$ No rechazamos $H_0$.
 
-<!-- Comprobamos la condición de normalidad: -->
-
-<!-- ```{r include=TRUE, message=FALSE} -->
-<!-- # shapiro.test(chol.manB) -->
-
-<!-- library(PASWR2) -->
-<!-- eda(chol.manB) -->
-<!-- ``` -->
-
-<!-- Realizamos el test (paramétrico) para una media: -->
-
-<!-- ```{r, include=TRUE} -->
-<!-- t.test(chol.manB, mu=200, alternative="greater", conf.level=0.95) -->
-<!-- ``` -->
-
-<!-- Como p-valor$=0.23>\alpha=0.05 \Rightarrow$ No rechazamos $H_0$. -->
-
-<!-- **Interpretación**: Con un nivel de significación del 5%, no existen evidencias estadísticas para afirmar que el nivel medio de colesterol en los hombres de Buckingham es superior a 200 mg/dL. -->
+**Interpretación**: Con un nivel de significación del 5%, no existen evidencias estadísticas para afirmar que el nivel medio de colesterol en los hombres de Buckingham es superior a 200 mg/dL.
 
 ## 1.2. Contrasta al nivel de significación 0.10 si la presión diastólica media de los hombres es distinta a la presión diastólica media de las mujeres. Comprueba que las dos muestras provienen de poblaciones normales. Realiza el correspondiente test de medias.
 
-<!-- Definimos las variables: -->
+Definimos las variables:
 
-<!-- X="Presión diastólica de los hombres (mmHg)" -->
+X="Presión diastólica de los hombres (mmHg)"
 
-<!-- Y="Presión diastólica de las mujeres (mmHg)" -->
+Y="Presión diastólica de las mujeres (mmHg)"
 
-<!-- El contraste que debemos realizar ($\alpha=0.10$) se escribe como: -->
+El contraste que debemos realizar ($\alpha=0.10$) se escribe como:
 
-<!-- \begin{eqnarray*} -->
-<!-- \begin{array}{rl} -->
-<!-- H_0: & \mu_X - \mu_Y = 0 \\ -->
-<!-- H_1: & \mu_X - \mu_Y \neq 0 \\ -->
-<!-- \end{array} -->
-<!-- \end{eqnarray*} -->
+\begin{eqnarray*}
+\begin{array}{rl}
+H_0: & \mu_X - \mu_Y = 0 \\
+H_1: & \mu_X - \mu_Y \neq 0 \\
+\end{array}
+\end{eqnarray*}
 
-<!-- En primer lugar seleccionamos los datos de las muestras: -->
+En primer lugar seleccionamos los datos de las muestras:
 
-<!-- ```{r include=TRUE} -->
-<!-- # table(diabetes$gender) -->
+```{r include=TRUE}
+# table(diabetes$gender)
 
-<!-- pos1 <- which(diabetes$gender=="male") -->
-<!-- bp1d.male <- diabetes$bp.1d[pos1] -->
+pos1 <- which(diabetes$gender=="male")
+bp1d.male <- diabetes$bp.1d[pos1]
 
-<!-- pos2 <- which(diabetes$gender=="female") -->
-<!-- bp1d.female <-diabetes$bp.1d[pos2] -->
-<!-- ``` -->
+pos2 <- which(diabetes$gender=="female")
+bp1d.female <-diabetes$bp.1d[pos2]
+```
 
-<!-- Comprobamos la condición de normalidad en ambas variables: -->
+Comprobamos la condición de normalidad en ambas variables:
 
-<!-- ```{r include=TRUE} -->
-<!-- eda(bp1d.male) -->
-<!-- eda(bp1d.female) -->
-<!-- ``` -->
+```{r include=TRUE}
+eda(bp1d.male)
+eda(bp1d.female)
+```
 
-<!-- Verificamos si podemos asumir que las varianzas son iguales o no: -->
+Verificamos si podemos asumir que las varianzas son iguales o no:
 
-<!-- ```{r include=TRUE} -->
-<!-- boxplot(bp.1d ~ gender, data=diabetes) -->
-<!-- ``` -->
+```{r include=TRUE}
+boxplot(bp1d.male, bp1d.female)
+# boxplot(bp.1d ~ gender, data=diabetes)
+```
 
-<!-- Realizamos el test (paramétrico) para la diferencia de medias en poblaciones independientes: -->
+Realizamos el test (paramétrico) para la diferencia de medias en poblaciones independientes:
 
-<!-- ```{r include=TRUE} -->
-<!-- t.test(bp1d.male, bp1d.female, mu=0, alternative="two.sided", -->
-<!--        var.equal=TRUE,  conf.level=0.9) -->
-<!-- ``` -->
+```{r include=TRUE}
+t.test(bp1d.male, bp1d.female, mu=0, alternative="two.sided", var.equal=TRUE)
+```
 
-<!-- Como p-valor$=0.15>\alpha=0.10 \Rightarrow$ No rechazamos $H_0$. -->
+Como p-valor$=0.15>\alpha=0.10 \Rightarrow$ No rechazamos $H_0$.
 
-<!-- **Interpretación**: Con un nivel de significación del 10%, no existen evidencias estadísticas para afirmar que la presión diastólica media de los hombres sea distinta del de las mujeres. -->
+**Interpretación**: Con un nivel de significación del 10%, no existen evidencias estadísticas para afirmar que la presión diastólica media de los hombres sea distinta del de las mujeres.
 
 ## 1.3. Se dispone de dos aparatos, uno nuevo y otro antiguo, para medir los niveles de glucosa en sangre. Los médicos sospechan que el nuevo aparato proporciona niveles de glucosa en sangre superiores al antiguo. Se dispone de una muestra con 15 pacientes diabéticos a los que se les ha medido los niveles de glucosa con los dos aparatos. Las medidas se encuentran en el fichero `GLUCOSE` de la librería `PASWR2`.
 
@@ -181,41 +175,41 @@ Y="Nivel de glucosa (mg/dL) con el aparato nuevo"
 
 -   **¿Son las muestras independientes?**
 
-<!-- Como se tratan de los mismos individuos medidos en distintos instantes de tiempo, las muestras son dependientes (o emparejadas). Por lo tanto, trabajaremos con la diferencia entre ambas variables: -->
+Como se tratan de los mismos individuos medidos en distintos instantes de tiempo, las muestras son dependientes (o emparejadas). Por lo tanto, trabajaremos con la diferencia entre ambas variables:
 
-```{r include=FALSE}
+```{r include=TRUE}
 D <- GLUCOSE$old - GLUCOSE$new
 ```
 
 -   **Comprueba si puede asumirse la hipótesis de normalidad.**
 
-```{r include=FALSE}
+```{r include=TRUE}
 eda(D)
 ```
 
 -   **Contrasta al nivel de significación** $\alpha=0.05$ **si el nuevo aparato proporciona medidas más altas que el antiguo.**
 
-<!-- El contraste que debemos realizar se escribe como: -->
+El contraste que debemos realizar se escribe como:
 
-<!-- \begin{eqnarray*} -->
-<!-- \begin{array}{rl} -->
-<!-- H_0: & \mu_D = 0 \\ -->
-<!-- H_1: & \mu_D < 0 \\ -->
-<!-- \end{array} -->
-<!-- \end{eqnarray*} -->
+\begin{eqnarray*}
+\begin{array}{rl}
+H_0: & \mu_D = 0 \\
+H_1: & \mu_D < 0 \\
+\end{array}
+\end{eqnarray*}
 
-<!-- Como se verifica la hipótesis de normalidad, realizamo el test (paramétrico) para una media: -->
+Como se verifica la hipótesis de normalidad, realizamo el test (paramétrico) para una media:
 
-<!-- ```{r include=TRUE} -->
-<!-- t.test(D, mu=0, alternative="less", conf.level=0.95) -->
+```{r include=TRUE}
+t.test(D, mu=0, alternative="less")
 
-<!-- # Otra opción: -->
-<!-- t.test(GLUCOSE$old, GLUCOSE$new, paired=TRUE, mu=0, alternative="less", conf.level=0.95) -->
-<!-- ``` -->
+# Otra opción:
+t.test(GLUCOSE$old, GLUCOSE$new, paired=TRUE, mu=0, alternative="less")
+```
 
-<!-- Como p-valor$\approx 0<\alpha=0.05 \Rightarrow$ Rechazamos $H_0$. -->
+Como p-valor$\approx 0<\alpha=0.05 \Rightarrow$ Rechazamos $H_0$.
 
-<!-- **Interpretación**: Con un nivel de significación del 5%, existen evidencias estadísticas para afirmar que el aparato nuevo proporciona niveles de medios de glucosa en sangre superiores al aparato viejo. -->
+**Interpretación**: Con un nivel de significación del 5%, existen evidencias estadísticas para afirmar que el aparato nuevo proporciona niveles de medios de glucosa en sangre superiores al aparato viejo.
 
 ## 1.4. Contrasta al nivel de significación 0.05 si la proporción de hombres con hemoglobina glicosilada (`glyhb`) por encima del 6% es superior a 0.2.
 
@@ -308,131 +302,131 @@ ny
 
 ## 2.1. ¿Puede asumirse que la variable 'hdl' en mujeres sigue una distribución normal? Contrasta al nivel de significación 0.05 si la media de la variable 'hdl' en mujeres es superior a 47.
 
-<!-- Sea X="Nivel de HDL de las mujeres (mg/dL)". -->
+Sea X="Nivel de HDL de las mujeres (mg/dL)".
 
-<!-- El contraste que debemos realizar ($\alpha=0.05$) se escribe como: -->
+El contraste que debemos realizar ($\alpha=0.05$) se escribe como:
 
-<!-- \begin{eqnarray*} -->
-<!-- \begin{array}{rl} -->
-<!-- H_0: & \mu=47 \\ -->
-<!-- H_1: & \mu>47 \\ -->
-<!-- \end{array} -->
-<!-- \end{eqnarray*} -->
+\begin{eqnarray*}
+\begin{array}{rl}
+H_0: & \mu=47 \\
+H_1: & \mu>47 \\
+\end{array}
+\end{eqnarray*}
 
-<!-- En primer lugar seleccionamos los datos de la muestra: -->
+En primer lugar seleccionamos los datos de la muestra:
 
-<!-- ```{r include=TRUE} -->
-<!-- pos <- which(diabetes$gender=="female") -->
-<!-- hdl.female <- diabetes$hdl[pos] -->
-<!-- ``` -->
+```{r include=TRUE}
+pos <- which(diabetes$gender=="female")
+hdl.female <- diabetes$hdl[pos]
+```
 
-<!-- Comprobamos la condición de normalidad: -->
+Comprobamos la condición de normalidad:
 
-<!-- ```{r include=TRUE, message=FALSE} -->
-<!-- eda(hdl.female) -->
-<!-- ``` -->
+```{r include=TRUE, message=FALSE}
+eda(hdl.female)
+```
 
-<!-- Como no se verifica la normalidad (p-valor $<0.05$), realizamos el test no-paramétrico para una media (test de Wilcoxon): -->
+Como no se verifica la normalidad (p-valor $<0.05$), realizamos el test no-paramétrico para una media (test de Wilcoxon):
 
-<!-- ```{r include=TRUE} -->
-<!-- wilcox.test(hdl.female, mu=47, alternative="greater") -->
-<!-- ``` -->
+```{r include=TRUE}
+wilcox.test(hdl.female, mu=47, alternative="greater")
+```
 
-<!-- Como p-valor$=0.0015 < \alpha=0.05 \Rightarrow$ Rechazamos $H_0$. -->
+Como p-valor$=0.0015 < \alpha=0.05 \Rightarrow$ Rechazamos $H_0$.
 
-<!-- **Interpretación**: Con un nivel de significación del 5%, existen evidencias estadísticas para afirmar que el nivel medio de HDL en mujeres es superior a 47 mg/dL. -->
+**Interpretación**: Con un nivel de significación del 5%, existen evidencias estadísticas para afirmar que el nivel medio de HDL en mujeres es superior a 47 mg/dL.
 
 ## 2.2. ¿Contrasta al nivel de significación 0.05 si existen diferencias entre los niveles de hdl en hombres y en mujeres. Comprueba si puede asumirse normalidad y realiza el contraste adecuado.
 
-<!-- Definimos las variables: -->
+Definimos las variables:
 
-<!-- X="Nivel de HDL en hombres (mg/dL)" -->
+X="Nivel de HDL en hombres (mg/dL)"
 
-<!-- Y="Nivel de HDL en mujeres (mg/dL)" -->
+Y="Nivel de HDL en mujeres (mg/dL)"
 
-<!-- El contraste que debemos realizar ($\alpha=0.10$) se escribe como: \begin{eqnarray*} -->
-<!-- \begin{array}{rl} -->
-<!-- H_0: & \mu_X - \mu_Y = 0 \\ -->
-<!-- H_1: & \mu_X - \mu_Y \neq 0 \\ -->
-<!-- \end{array} -->
-<!-- \end{eqnarray*} -->
+El contraste que debemos realizar ($\alpha=0.10$) se escribe como: \begin{eqnarray*}
+\begin{array}{rl}
+H_0: & \mu_X - \mu_Y = 0 \\
+H_1: & \mu_X - \mu_Y \neq 0 \\
+\end{array}
+\end{eqnarray*}
 
-<!-- En primer lugar seleccionamos los datos de las muestras: -->
+En primer lugar seleccionamos los datos de las muestras:
 
-<!-- ```{r include=TRUE} -->
-<!-- pos1 <- which(diabetes$gender=="male") -->
-<!-- hdl.male <- diabetes$hdl[pos1] -->
+```{r include=TRUE}
+pos1 <- which(diabetes$gender=="male")
+hdl.male <- diabetes$hdl[pos1]
 
-<!-- pos2 <- which(diabetes$gender=="female") -->
-<!-- hdl.female <- diabetes$hdl[pos2] -->
-<!-- ``` -->
+pos2 <- which(diabetes$gender=="female")
+hdl.female <- diabetes$hdl[pos2]
+```
 
-<!-- Comprobamos la condición de normalidad en ambas variables: -->
+Comprobamos la condición de normalidad en ambas variables:
 
-<!-- ```{r include=TRUE} -->
-<!-- eda(hdl.male) -->
-<!-- eda(hdl.female) -->
-<!-- ``` -->
+```{r include=TRUE}
+eda(hdl.male)
+eda(hdl.female)
+```
 
-<!-- En este caso no es necesario, pero podríamos verificar la igualdad de varianzas: -->
+En este caso no es necesario, pero podríamos verificar la igualdad de varianzas:
 
-<!-- ```{r include=TRUE} -->
-<!-- boxplot(hdl ~ gender, data=diabetes) -->
-<!-- ``` -->
+```{r include=TRUE}
+boxplot(hdl ~ gender, data=diabetes)
+```
 
-<!-- Como no se verifica la normalidad, realizamos el test no-paramétrico para la diferencia de medias (test de Mann-Withney): -->
+Como no se verifica la normalidad, realizamos el test no-paramétrico para la diferencia de medias (test de Mann-Withney):
 
-<!-- ```{r include=TRUE} -->
-<!-- wilcox.test(hdl.male, hdl.female, mu=0, alternative="two.sided", conf.level=0.95) -->
-<!-- ``` -->
+```{r include=TRUE}
+wilcox.test(hdl.male, hdl.female, mu=0, alternative="two.sided")
+```
 
-<!-- Como p-valor$=0.006<\alpha=0.05 \Rightarrow$ Rechazamos $H_0$. -->
+Como p-valor$=0.006<\alpha=0.05 \Rightarrow$ Rechazamos $H_0$.
 
-<!-- **Interpretación**: Con un nivel de significación del 5%, existen evidencias estadísticas para afirmar que el nivel medio de HDL en hombres y mujeres es distinto. -->
+**Interpretación**: Con un nivel de significación del 5%, existen evidencias estadísticas para afirmar que el nivel medio de HDL en hombres y mujeres es distinto.
 
 ## 2.3. Considera el fichero `PHENYL` de la libreria `PASWR2`. Contrasta al nivel de significación 0.05 si existen diferencias en los niveles medios de la coenzima Q10 en el momento de comenzar el estudio (variable `Q10.1`) y al finalizar el estudio (variable `Q10.4`).
 
-<!-- Definimos las variables: -->
+Definimos las variables:
 
-<!-- X="Nivel de coenzima Q10 al comienzo del estudio" -->
+X="Nivel de coenzima Q10 al comienzo del estudio"
 
-<!-- X="Nivel de coenzima Q10 al final del estudio" -->
+X="Nivel de coenzima Q10 al final del estudio"
 
-<!-- ```{r include=TRUE} -->
-<!-- data("PHENYL") -->
-<!-- head(PHENYL) -->
-<!-- ``` -->
+```{r include=TRUE}
+data("PHENYL")
+head(PHENYL)
+```
 
-<!-- Como se tratan de los mismos individuos medidos en distintos instantes de tiempo, las muestras son dependientes (o emparejadas). Por lo tanto, trabajaremos con la diferencia entre ambas variables: -->
+Como se tratan de los mismos individuos medidos en distintos instantes de tiempo, las muestras son dependientes (o emparejadas). Por lo tanto, trabajaremos con la diferencia entre ambas variables:
 
-<!-- ```{r include=TRUE} -->
-<!-- D <- PHENYL$Q10.1-PHENYL$Q10.4 -->
+```{r include=TRUE}
+D <- PHENYL$Q10.1-PHENYL$Q10.4
 
-<!-- # Comprobamos la condición de normalidad -->
-<!-- eda(D) -->
-<!-- ``` -->
+# Comprobamos la condición de normalidad
+eda(D)
+```
 
-<!-- El contraste que debemos realizar se escribe como: -->
+El contraste que debemos realizar se escribe como:
 
-<!-- \begin{eqnarray*} -->
-<!-- \begin{array}{rl} -->
-<!-- H_0: & \mu_D = 0 \\ -->
-<!-- H_1: & \mu_D \neq 0 \\ -->
-<!-- \end{array} -->
-<!-- \end{eqnarray*} -->
+\begin{eqnarray*}
+\begin{array}{rl}
+H_0: & \mu_D = 0 \\
+H_1: & \mu_D \neq 0 \\
+\end{array}
+\end{eqnarray*}
 
-<!-- Como no se verifica la hipótesis de normalidad, realizamo el test no-paramétrico para la diferencia de medias. -->
+Como no se verifica la hipótesis de normalidad, realizamo el test no-paramétrico para la diferencia de medias.
 
-<!-- ```{r include=TRUE} -->
-<!-- wilcox.test(D, mu=0, alternative="two.sided", conf.level=0.95) -->
+```{r include=TRUE}
+wilcox.test(D, mu=0, alternative="two.sided")
 
-<!-- # Otra opción -->
-<!-- wilcox.test(PHENYL$Q10.1, PHENYL$Q10.4, paired=TRUE, mu=0, alternative="two.sided", conf.level=0.95) -->
-<!-- ``` -->
+# Otra opción
+wilcox.test(PHENYL$Q10.1, PHENYL$Q10.4, paired=TRUE, mu=0, alternative="two.sided")
+```
 
-<!-- Como p-valor$=0.0005 < \alpha=0.05 \Rightarrow$ Rechazamos $H_0$. -->
+Como p-valor$=0.0005 < \alpha=0.05 \Rightarrow$ Rechazamos $H_0$.
 
-<!-- **Interpretación**: Con un nivel de significación del 5%, tenemos evidencias estadísticas para afirmar que los niveles medios de la coenzima Q10 han cambiado a lo largo del estudio. -->
+**Interpretación**: Con un nivel de significación del 5%, tenemos evidencias estadísticas para afirmar que los niveles medios de la coenzima Q10 han cambiado a lo largo del estudio.
 
 # 3. Análisis de la varianza y test de Kruskal-Wallis
 
