--- a/Practica3.qmd
+++ b/Practica3.qmd
@@ -219,34 +219,36 @@ X="Nº de hombres con valores de hemoglobina glicosilada superior al 6%" $\sim B
 
 -   **Calcula el número de hombres en la muestra con `glyhb` por encima del 6% y el total de hombres en la muestra.**
 
-```{r include=FALSE}
+```{r include=TRUE}
 # Casos favorables
 x <- sum(diabetes$gender=="male" & diabetes$glyhb>6)
+x
 
 # Casos totales
 n <- sum(diabetes$gender=="male")
+n
 ```
 
 -   **Realiza un test exacto y un test aproximado para la proporción verdadera.**
 
-<!-- El contraste que debemos realizar se escribe como: -->
+El contraste que debemos realizar se escribe como:
 
-<!-- \begin{eqnarray*} -->
-<!-- \begin{array}{rl} -->
-<!-- H_0: & \pi = 0.2 \\ -->
-<!-- H_1: & \pi > 0.2 \\ -->
-<!-- \end{array} -->
-<!-- \end{eqnarray*} -->
+\begin{eqnarray*}
+\begin{array}{rl}
+H_0: & \pi = 0.2 \\
+H_1: & \pi > 0.2 \\
+\end{array}
+\end{eqnarray*}
 
-<!-- Como se verifica que $n*\pi_0 =169*0.2 = 33.8 > 10$ y $n*(1-\pi_0) =169*0.8 = 135.2 > 10$, podemos realizar el test aproximado como: -->
+Como se verifica que $n*\pi_0=169*0.2 = 33.8 > 10$ y $n*(1-\pi_0)=169*0.8 = 135.2 > 10$, podemos realizar el test aproximado como:
 
-<!-- ```{r include=TRUE} -->
-<!-- prop.test(x, n, p=0.2, alternative="greater", conf.level=0.95) -->
-<!-- ``` -->
+```{r include=TRUE}
+prop.test(x, n, p=0.2, alternative="greater")
+```
 
-<!-- Como p-valor$=0.183 > \alpha=0.05 \Rightarrow$ No rechazamos $H_0$. -->
+Como p-valor$=0.183 > \alpha=0.05 \Rightarrow$ No rechazamos $H_0$.
 
-<!-- **Interpretación**: Con un nivel de significación del 5%, no podemos afirmar que la proporción de hombres con valores de hemoglobina glicosilada superior al 6% sea superior a 0.2. -->
+**Interpretación**: Con un nivel de significación del 5%, no podemos afirmar que la proporción de hombres con valores de hemoglobina glicosilada superior al 6% sea superior a 0.2.
 
 ## 1.5. Contrasta al nivel de significación 0.05 si la proporción de hombres con colesterol por debajo de 200mg/dL es superior a la proporción de mujeres con colesterol por debajo de 200mg/dL.
 
@@ -258,7 +260,7 @@ Y="Nº de mujeres con colesterol por debajo de 200mg/dL" $\sim Bin(n_Y,\pi_Y)$
 
 -   **Calcula el número de hombres en la muestra con colesterol por debajo de 200mg/dL y el total de hombres de la muestra (**$n_X$).
 
-```{r include=FALSE}
+```{r include=TRUE}
 x <- sum(diabetes$gender=="male" & diabetes$chol<200)
 x
 
@@ -268,8 +270,7 @@ nx
 
 -   **Calcula el número de mujeres en la muestra con colesterol por debajo de 200mg/dL y el total de mujeres de la muestra (**$n_Y$).
 
-```{r include=FALSE}
-# Nº de hombres con colesterol por debajo de 200mg/dL (casos favorables) y nº de hombres en la muestra (casos totales)
+```{r include=TRUE}
 y <- sum(diabetes$gender=="female" & diabetes$chol<200)
 y
 
@@ -279,24 +280,24 @@ ny
 
 -   **Realiza un test para la diferencia de proporciones.**
 
-<!-- El contraste que debemos realizar se escribe como: -->
+El contraste que debemos realizar se escribe como:
 
-<!-- \begin{eqnarray*} -->
-<!-- \begin{array}{rl} -->
-<!-- H_0: & \pi_X - \pi_Y = 0 \\ -->
-<!-- H_1: & \pi_X - \pi_Y > 0 \\ -->
-<!-- \end{array} -->
-<!-- \end{eqnarray*} -->
+\begin{eqnarray*}
+\begin{array}{rl}
+H_0: & \pi_X - \pi_Y = 0 \\
+H_1: & \pi_X - \pi_Y > 0 \\
+\end{array}
+\end{eqnarray*}
 
-<!-- Realizamos el test en R: -->
+Realizamos el test en R:
 
-<!-- ```{r include=TRUE} -->
-<!-- prop.test(c(x,y), c(nx,ny), alternative="greater", conf.level=0.95) -->
-<!-- ``` -->
+```{r include=TRUE}
+prop.test(c(x,y), c(nx,ny), alternative="greater")
+```
 
-<!-- Como p-valor$=0.3931 > \alpha=0.05 \Rightarrow$ No rechazamos $H_0$. -->
+Como p-valor$=0.3931 > \alpha=0.05 \Rightarrow$ No rechazamos $H_0$.
 
-<!-- **Interpretación**: Con un nivel de significación del 5%, no podemos afirmar que la proporción de hombres con colesterol por debajo de 200mg/dL sea superior a la proporción de mujeres con colesterol por debajo de 200mg/dL. -->
+**Interpretación**: Con un nivel de significación del 5%, no podemos afirmar que la proporción de hombres con colesterol por debajo de 200mg/dL sea superior a la proporción de mujeres con colesterol por debajo de 200mg/dL.
 
 # 2. Contrastes no-paramétricos
 
@@ -516,69 +517,69 @@ kruskal(diabetes.female$glyhb, diabetes.female$frame, alpha=0.05, group=FALSE, c
 
 <!-- -   Realiza el correspondiente test de hipótesis. -->
 
-<!-- <!-- ```{r include=TRUE} --> -->
+<!-- ```{r include=TRUE} -->
 
-<!-- <!-- patients <- read.table(file="patients.txt", header=T, stringsAsFactors=T) --> -->
+<!-- patients <- read.table(file="patients.txt", header=T, stringsAsFactors=T) -->
 
-<!-- <!-- # Creamos un nuevo fichero con los pacientes del hospital "1" --> -->
+<!-- # Creamos un nuevo fichero con los pacientes del hospital "1" -->
 
-<!-- <!-- pos <- which(patients$ID.hospital=="1") --> -->
+<!-- pos <- which(patients$ID.hospital=="1") -->
 
-<!-- <!-- datos <- patients[pos,] --> -->
+<!-- datos <- patients[pos,] -->
 
-<!-- <!-- str(datos) --> -->
+<!-- str(datos) -->
 
-<!-- <!-- ``` --> -->
+<!-- ``` -->
 
-<!-- <!-- Definimos las variables --> -->
+<!-- Definimos las variables -->
 
-<!-- <!-- X="Niveles de IL6 en pacientes con cáncer en estadio I (pg/dL)" --> -->
+<!-- X="Niveles de IL6 en pacientes con cáncer en estadio I (pg/dL)" -->
 
-<!-- <!-- Y="Niveles de IL6 en pacientes con cáncer en estadio II (pg/dL)" --> -->
+<!-- Y="Niveles de IL6 en pacientes con cáncer en estadio II (pg/dL)" -->
 
-<!-- <!-- El contraste que queremos realizar ($\alpha=0.05$) se escribe como: \begin{eqnarray*} --> -->
+<!-- El contraste que queremos realizar ($\alpha=0.05$) se escribe como: \begin{eqnarray*} -->
 
-<!-- <!-- \begin{array}{rl} --> -->
+<!-- \begin{array}{rl} -->
 
-<!-- <!-- H_0: & \mu_X-\mu_Y=0 \\ --> -->
+<!-- H_0: & \mu_X-\mu_Y=0 \\ -->
 
-<!-- <!-- H_1: & \mu_X-\mu_Y<0 \\ --> -->
+<!-- H_1: & \mu_X-\mu_Y<0 \\ -->
 
-<!-- <!-- \end{array} --> -->
+<!-- \end{array} -->
 
-<!-- <!-- \end{eqnarray*} --> -->
+<!-- \end{eqnarray*} -->
 
-<!-- <!-- En primer lugar, seleccionamos las muestras y comprobamos la condición de normalidad en ambas variables: --> -->
+<!-- En primer lugar, seleccionamos las muestras y comprobamos la condición de normalidad en ambas variables: -->
 
-<!-- <!-- ```{r include=TRUE} --> -->
+<!-- ```{r include=TRUE} -->
 
-<!-- <!-- pos1 <- which(datos$CancerStage=="I") --> -->
+<!-- pos1 <- which(datos$CancerStage=="I") -->
 
-<!-- <!-- pos2 <- which(datos$CancerStage=="II") --> -->
+<!-- pos2 <- which(datos$CancerStage=="II") -->
 
-<!-- <!-- x <- datos$IL6[pos1] --> -->
+<!-- x <- datos$IL6[pos1] -->
 
-<!-- <!-- y <- datos$IL6[pos2] --> -->
+<!-- y <- datos$IL6[pos2] -->
 
-<!-- <!-- eda(x) --> -->
+<!-- eda(x) -->
 
-<!-- <!-- eda(y) --> -->
+<!-- eda(y) -->
 
-<!-- <!-- ``` --> -->
+<!-- ``` -->
 
-<!-- <!-- Como los p-valores del test de Shapiro-Wilk son \<0.05, rechazamos la hipótesis nula de normalidad. --> -->
+<!-- Como los p-valores del test de Shapiro-Wilk son \<0.05, rechazamos la hipótesis nula de normalidad. -->
 
-<!-- <!-- Por lo tanto, debemos realizar el test no-paramétrico para la diferencia de medias en poblaciones independientes: --> -->
+<!-- Por lo tanto, debemos realizar el test no-paramétrico para la diferencia de medias en poblaciones independientes: -->
 
-<!-- <!-- ```{r include=TRUE} --> -->
+<!-- ```{r include=TRUE} -->
 
-<!-- <!-- wilcox.test(x, y, mu=0, alternative="less", conf.level=0.95) --> -->
+<!-- wilcox.test(x, y, mu=0, alternative="less", conf.level=0.95) -->
 
-<!-- <!-- ``` --> -->
+<!-- ``` -->
 
-<!-- <!-- Como p-valor$=0.098>\alpha=0.05 \Rightarrow$ No rechazamos $H_0$. --> -->
+<!-- Como p-valor$=0.098>\alpha=0.05 \Rightarrow$ No rechazamos $H_0$. -->
 
-<!-- <!-- **Interpretación**: Con un nivel de significación del 5%, no existen evidencias estadísticas suficientes para afirmar que los niveles medios de la concentración de Interleukina-6 sean más bajos en pacientes con cáncer en estadio I que en paciente con cáncer en estadio II. --> -->
+<!-- **Interpretación**: Con un nivel de significación del 5%, no existen evidencias estadísticas suficientes para afirmar que los niveles medios de la concentración de Interleukina-6 sean más bajos en pacientes con cáncer en estadio I que en paciente con cáncer en estadio II. -->
 
 <!-- ## 4.2. Se estudió la eficacia de la sulfinpirazona en prevenir la muerte después de sufrir infarto de miocardio. Para ello se consideraron pacientes que habían sufrido infarto de miocardio. A un grupo se les proporcionó sulfinpirazona y a otro grupo se les suministró placebo. En la siguiente tabla se muestra el número de pacientes de cada grupo que murieron y que superaron el infarto. -->
 
@@ -597,32 +598,32 @@ kruskal(diabetes.female$glyhb, diabetes.female$frame, alpha=0.05, group=FALSE, c
 
 <!-- -   **Si has detectado diferencias, averigua entre qué grupos existen diferencias estadísticamente significativas** -->
 
-<!-- <!-- ```{r include=TRUE} --> -->
+<!-- ```{r include=TRUE} -->
 
-<!-- <!-- pos <- which(patients$ID.hospital=="1") --> -->
+<!-- pos <- which(patients$ID.hospital=="1") -->
 
-<!-- <!-- datos <- patients[pos,] --> -->
+<!-- datos <- patients[pos,] -->
 
-<!-- <!-- boxplot(Age ~ CancerStage, data=datos) --> -->
+<!-- boxplot(Age ~ CancerStage, data=datos) -->
 
-<!-- <!-- model <- aov(Age ~ CancerStage, data=datos) --> -->
+<!-- model <- aov(Age ~ CancerStage, data=datos) -->
 
-<!-- <!-- summary(model) --> -->
+<!-- summary(model) -->
 
-<!-- <!-- checking.plots(model) --> -->
+<!-- checking.plots(model) -->
 
-<!-- <!-- r <- rstandard(model) --> -->
+<!-- r <- rstandard(model) -->
 
-<!-- <!-- shapiro.test(r)  --> -->
+<!-- shapiro.test(r)  -->
 
-<!-- <!-- library(car) --> -->
+<!-- library(car) -->
 
-<!-- <!-- leveneTest(model) --> -->
+<!-- leveneTest(model) -->
 
-<!-- <!-- bp.mc <- TukeyHSD(model, conf.level=0.9) --> -->
+<!-- bp.mc <- TukeyHSD(model, conf.level=0.9) -->
 
-<!-- <!-- bp.mc --> -->
+<!-- bp.mc -->
 
-<!-- <!-- plot(bp.mc) --> -->
+<!-- plot(bp.mc) -->
 
-<!-- <!-- ``` --> -->
+<!-- ``` -->
