--- a/Practica3.qmd
+++ b/Practica3.qmd
@@ -505,125 +505,33 @@ library(agricolae)
 kruskal(diabetes.female$glyhb, diabetes.female$frame, alpha=0.05, group=FALSE, console=TRUE)
 ```
 
-<!-- # 4. Para entregar -->
+# 4. Para entregar
 
-<!-- Responde a las siguientes cuestiones, utilizando la misma muestra de pacientes que te ha sido asignada en la Práctica 2 para el fichero `patients.txt`. -->
+Responde a las siguientes cuestiones, utilizando la misma muestra de pacientes que te ha sido asignada en la Práctica 2 para el fichero `patients.txt`.
 
-<!-- ## 4.1. Contrasta al nivel de significación 0.05 si los niveles medios de la concentración de Interleukina-6 (`IL6`) son significativamente más bajos en pacientes con cáncer en estadio I que en paciente con cáncer en estadio II. -->
+## 4.1. Contrasta al nivel de significación 0.1 si los niveles medios de la concentración de Interleukina-6 (`IL6`) son significativamente distintos en pacientes con cáncer en estadio I que en paciente con cáncer en estadio II.
 
-<!-- -   Define correctamente las variables del problema. -->
+-   Define correctamente las variables del problema.
 
-<!-- -   Comprueba que las dos muestras provienen de poblaciones normales. -->
+-   Comprueba si las dos muestras provienen de poblaciones normales.
 
-<!-- -   Realiza el correspondiente test de hipótesis. -->
+-   Realiza el correspondiente test de hipótesis.
 
-<!-- ```{r include=TRUE} -->
 
-<!-- patients <- read.table(file="patients.txt", header=T, stringsAsFactors=T) -->
+## 4.2. Se estudió la eficacia de la sulfinpirazona en prevenir la muerte después de sufrir infarto de miocardio. Para ello se consideraron pacientes que habían sufrido infarto de miocardio. A un grupo se les proporcionó sulfinpirazona y a otro grupo se les suministró placebo. En la siguiente tabla se muestra el número de pacientes de cada grupo que murieron y que superaron el infarto.
 
-<!-- # Creamos un nuevo fichero con los pacientes del hospital "1" -->
+|                 | Death (all causes) | Survivors |
+|-----------------|--------------------|-----------|
+| Sulphinpyrazole | 41                 | 692       |
+| Placebo         | 60                 | 682       |
 
-<!-- pos <- which(patients$ID.hospital=="1") -->
+-   **Contrasta al nivel de significación** $\alpha=0.01$ si la proporción de muertes de pacientes que tomaron sulfinpirazona es inferior a la de pacientes que tomaron un placebo.
 
-<!-- datos <- patients[pos,] -->
 
-<!-- str(datos) -->
+## 4.3. Contrasta al nivel de significación $\alpha=0.1$ si existen diferencias en la edad media de los pacientes según el estadio de cancer (`CancerStage`).
 
-<!-- ``` -->
+-   **Realiza una exploración gráfica y el análisis de varianza correspondiente**
 
-<!-- Definimos las variables -->
+-   **Comprueba si pueden asumirse las hipótesis del modelo**
 
-<!-- X="Niveles de IL6 en pacientes con cáncer en estadio I (pg/dL)" -->
-
-<!-- Y="Niveles de IL6 en pacientes con cáncer en estadio II (pg/dL)" -->
-
-<!-- El contraste que queremos realizar ($\alpha=0.05$) se escribe como: \begin{eqnarray*} -->
-
-<!-- \begin{array}{rl} -->
-
-<!-- H_0: & \mu_X-\mu_Y=0 \\ -->
-
-<!-- H_1: & \mu_X-\mu_Y<0 \\ -->
-
-<!-- \end{array} -->
-
-<!-- \end{eqnarray*} -->
-
-<!-- En primer lugar, seleccionamos las muestras y comprobamos la condición de normalidad en ambas variables: -->
-
-<!-- ```{r include=TRUE} -->
-
-<!-- pos1 <- which(datos$CancerStage=="I") -->
-
-<!-- pos2 <- which(datos$CancerStage=="II") -->
-
-<!-- x <- datos$IL6[pos1] -->
-
-<!-- y <- datos$IL6[pos2] -->
-
-<!-- eda(x) -->
-
-<!-- eda(y) -->
-
-<!-- ``` -->
-
-<!-- Como los p-valores del test de Shapiro-Wilk son \<0.05, rechazamos la hipótesis nula de normalidad. -->
-
-<!-- Por lo tanto, debemos realizar el test no-paramétrico para la diferencia de medias en poblaciones independientes: -->
-
-<!-- ```{r include=TRUE} -->
-
-<!-- wilcox.test(x, y, mu=0, alternative="less", conf.level=0.95) -->
-
-<!-- ``` -->
-
-<!-- Como p-valor$=0.098>\alpha=0.05 \Rightarrow$ No rechazamos $H_0$. -->
-
-<!-- **Interpretación**: Con un nivel de significación del 5%, no existen evidencias estadísticas suficientes para afirmar que los niveles medios de la concentración de Interleukina-6 sean más bajos en pacientes con cáncer en estadio I que en paciente con cáncer en estadio II. -->
-
-<!-- ## 4.2. Se estudió la eficacia de la sulfinpirazona en prevenir la muerte después de sufrir infarto de miocardio. Para ello se consideraron pacientes que habían sufrido infarto de miocardio. A un grupo se les proporcionó sulfinpirazona y a otro grupo se les suministró placebo. En la siguiente tabla se muestra el número de pacientes de cada grupo que murieron y que superaron el infarto. -->
-
-<!-- |                 | Death (all causes) | Survivors | -->
-<!-- |-----------------|--------------------|-----------| -->
-<!-- | Sulphinpyrazole | 41                 | 692       | -->
-<!-- | Placebo         | 60                 | 682       | -->
-
-<!-- -   **Contrasta al nivel de significación** $\alpha=0.01$ si la proporción de muertes de pacientes que tomaron sulfinpirazona es inferior a la de pacientes que tomaron un placebo. -->
-
-<!-- ## 4.3. Contrasta al nivel de significación $\alpha=0.1$ si existen diferencias en la edad media de los pacientes según el estadio de cancer (`CancerStage`). -->
-
-<!-- -   **Realiza una exploración gráfica y el análisis de varianza correspondiente** -->
-
-<!-- -   **Comprueba si pueden asumirse las hipótesis del modelo** -->
-
-<!-- -   **Si has detectado diferencias, averigua entre qué grupos existen diferencias estadísticamente significativas** -->
-
-<!-- ```{r include=TRUE} -->
-
-<!-- pos <- which(patients$ID.hospital=="1") -->
-
-<!-- datos <- patients[pos,] -->
-
-<!-- boxplot(Age ~ CancerStage, data=datos) -->
-
-<!-- model <- aov(Age ~ CancerStage, data=datos) -->
-
-<!-- summary(model) -->
-
-<!-- checking.plots(model) -->
-
-<!-- r <- rstandard(model) -->
-
-<!-- shapiro.test(r)  -->
-
-<!-- library(car) -->
-
-<!-- leveneTest(model) -->
-
-<!-- bp.mc <- TukeyHSD(model, conf.level=0.9) -->
-
-<!-- bp.mc -->
-
-<!-- plot(bp.mc) -->
-
-<!-- ``` -->
+-   **Si has detectado diferencias, averigua entre qué grupos existen diferencias estadísticamente significativas**
