Practica 3 - soluciones completas

--- a/Practica3.qmd
+++ b/Practica3.qmd
@@ -435,51 +435,54 @@ Como p-valor$=0.0005 < \alpha=0.05 \Rightarrow$ Rechazamos $H_0$.
 
 **a) Crea un nuevo fichero llamado `diabetes.female` solo con las mujeres.**
 
-```{r include=FALSE}
+```{r include=TRUE}
 pos <- which(diabetes$gender=="female")
 diabetes.female <- diabetes[pos,]
 ```
 
 **b) Exploración gráfica: representa los diagrama de caja de la variable `bp.1d` según la variable `frame`.**
 
-```{r include=FALSE}
+```{r include=TRUE}
 boxplot(bp.1d ~ frame, data=diabetes.female)
 ```
 
 **c) Realiza el análisis de la varianza con la función `aov()`**
 
-```{r include=FALSE}
-bp.aov <- aov(bp.1d ~ frame, data=diabetes.female)
-summary(bp.aov)
+```{r include=TRUE}
+modelo <- aov(bp.1d ~ frame, data=diabetes.female)
+summary(modelo)
 ```
 
 **d) Comprueba si pueden asumirse las hipótesis del modelo.**
 
-```{r include=FALSE}
+```{r include=TRUE}
+library(PASWR2)
+checking.plots(modelo)
+
+## Test de normalidad para los errores
+r <- rstandard(modelo)
+shapiro.test(r)           
+
+## Test de Levene para homogeneidad de varianzas
 library(car)
-checking.plots(bp.aov)
-
-r <- rstandard(bp.aov)
-shapiro.test(r)             ## Normalidad de los errores
-
-leveneTest(bp.aov)          ## Test de Levene para homogeneidad de varianzas
-
+leveneTest(bp.1d ~ frame, data=diabetes.female)
 ```
 
 **e) Utiliza un test de Tukey para averiguar entre qué niveles de la variable `frame` existen diferencias significativas en los niveles medios de la variable `bp.1d`**
 
-```{r include=FALSE}
-bp.mc <- TukeyHSD(bp.aov, conf.level=0.9)
-bp.mc
+```{r include=TRUE}
+modelo.comp <- TukeyHSD(modelo, conf.level=0.9)
+modelo.comp
 
-plot(bp.mc)                 ## Graficos de intervalos de confianza del test de Tukey
+## Graficos de intervalos de confianza del test de Tukey
+plot(modelo.comp)
 ```
 
 ## 3.2. Utiliza el fichero `diabetes.female` para responder a las siguientes cuestiones.
 
 **a) Contrasta al nivel de significación** $\alpha=0.05$ **si existen diferencias entre los niveles medios de glucosa glicosilada (`glyhb`) según la constitución del tamaño del cuerpo (`frame`) entre las mujeres.**
 
-```{r include=FALSE}
+```{r include=TRUE}
 boxplot(glyhb ~ frame, data=diabetes)
 
 glyhb.aov <- aov(glyhb~frame, data=diabetes.female)
@@ -499,7 +502,7 @@ kruskal.test(glyhb~frame, data=diabetes.female)
 
 **b) Si has detectado diferencias, averigua entre qué grupos existen diferencias estadísticamente significativas.**
 
-```{r include=FALSE}
+```{r include=TRUE}
 library(agricolae)
 
 kruskal(diabetes.female$glyhb, diabetes.female$frame, alpha=0.05, group=FALSE, console=TRUE)
