--- a/README.qmd
+++ b/README.qmd
@@ -11,7 +11,7 @@ format: gfm
 | 08-octubre   | [Práctica 1: Lectura y manejo de ficheros](./Practica1.html) |
 | 20-octubre   | [Práctica 2: Estadística descriptiva](./Practica2.html)      |
 | 29-octubre   | [Práctica 3: Contrastes paramétricos](./Practica3.html)      |
-| 10-noviembre | Práctica 4: Regresión lineal                                 |
+| 10-noviembre | [Práctica 4: Regresión lineal](./Practica4.html)             |
 | 17-noviembre | Práctica 5: Asociación. Riesgos relativos y Odds Ratio       |
 | 26-noviembre | Práctica 6: Regresión logística                              |
 | 15-diciembre | Práctica 7: Análisis de supervivencia                        |
