--- a/Practica6.qmd
+++ b/Practica6.qmd
@@ -95,71 +95,49 @@ abline(modelo1, col="red", lwd=2)
 
 ### 6. Ajusta el modelo de regresión logística $$\mbox{logit}[\pi(x)] = \log \left(\frac{\pi(x)}{1-\pi(x)} \right) = \alpha + \beta x$$ donde $\pi$ corresponde a la variable `prop`, y $x$ a la variable `anchura`.
 
-```{r include=FALSE}
+```{r include=TRUE}
 modelo2 <- glm(prop~anchura, weights=total, family=binomial, data=cangrejos)
 summary(modelo2)
 ```
 
 -   **¿Cuáles son las estimaciones de los coeficientes? ¿Son estadísticamente significativos?**
 
-    <!-- Las estimaciones de los coeficientes del modelo son: $\hat{\alpha}=`r round(as.numeric(modelo2$coefficients[1]),3)`$ y $\hat{\beta}=`r round(as.numeric(modelo2$coefficients[2]),3)`$ -->
+    Las estimaciones de los coeficientes del modelo son: $\hat{\alpha}=`r round(as.numeric(modelo2$coefficients[1]),3)`$ y $\hat{\beta}=`r round(as.numeric(modelo2$coefficients[2]),3)`$
 
-    <!-- Ambos coeficientes son estadísticamente significativos, ya que los p-valores son pequeños. -->
+    Ambos coeficientes son estadísticamente significativos, ya que los p-valores son pequeños.
 
-    <!-- Obtenemos la misma conclusión si interpretamos los intervalos de confianza de los parámetros del modelo: -->
+    Obtenemos la misma conclusión si interpretamos los intervalos de confianza de los parámetros del modelo:
 
-```{r, include=FALSE}
+```{r, include=TRUE}
 confint(modelo2)
 ```
 
 -   **¿El modelo ajustado es estadísticamente significativo?**
 
-```{r, include=FALSE}
+Para ello realizamos el test de la deviance:
+```{r, include=TRUE}
 anova(modelo2, test="Chi")
+
+# o equivalentemente
+modelo.null <- glm(prop~1, weights=total, family=binomial, data=cangrejos)
+anova(modelo.null, modelo2)
 ```
+Por lo tanto, podemos concluir que el ajuste del modelo que incluye la variable `anchura` es significativamente mejor que el modelo que solamente incluye un intercept.
 
-### 7. ¿Cuál es la tasa incremental de cambio a los 26 cm? ¿Qué significa?
 
-<!-- La tasa incremental de cambio en un punto $x$ se calcula como $$\hat{\beta}*\hat{\pi}(x)*(1-\hat{\pi}(x))$$ -->
+### 7. ¿Cuánto crece el odds estimado (*odds ratio*) por cada cm de aumento del caparazón? Proporciona un intervalo de confianza al 95%.
 
-<!-- Para una anchura de $x=26$ cm su valor es: -->
+Cuando la anchura del caparazón aumenta en 1 cm, el odds ratio ($OR=e^\beta$) es de
 
-```{r, include=FALSE}
-beta <- coef(modelo2)[2]
-hat.prop <- predict(modelo2, newdata=data.frame(anchura=26), type="response")
-
-beta*hat.prop*(1-hat.prop)
-```
-
-<!-- También se puede calcular mediante la función `tasa.incremental()` -->
-
-```{r, include=FALSE}
-source("tasa.incremental.R")
-tasa.incremental(modelo2, 26, 27, decimales=4)
-```
-
-<!-- **Interpretación:** Cuando la anchura del caparazón aumenta de 26 a 27 cm, la proporción de satélites por hembra aumenta en `r round(beta*hat.prop*(1-hat.prop),4)`. -->
-
-### 8. ¿Cuál es la tasa incremental de cambio de probabilidad para pasar de 23 a 24 cm en la anchura del caparazón? ¿Y de 25 a 26 cm? ¿Qué significan?
-
-```{r, include=FALSE}
-tasa.incremental(modelo2, 23, 24, decimales=4)
-tasa.incremental(modelo2, 25, 26, decimales=4)
-```
-
-### 9. ¿Cuánto crece el odds estimado (*odds ratio*) por cada cm de aumento del caparazón? Proporciona un intervalo de confianza al 95%.
-
-<!-- Cuando la anchura del caparazón aumenta en 1 cm, el odds ratio ($OR=e^\beta$) es de -->
-
-```{r, include=FALSE}
+```{r, include=TRUE}
 exp(coef(modelo2)[2])
 ```
 
-<!-- Es decir, por cada incremento de 1 cm en la anchura del caparazón el odds estimado crece aproximadamente un `r round(exp(coef(modelo2)[2])-1,2)*100`%. -->
+Es decir, por cada incremento de 1 cm en la anchura del caparazón el odds estimado crece aproximadamente un `r round(exp(coef(modelo2)[2])-1,2)*100`%.
 
-<!-- Para calcular un intervalo de confianza al 95% de $e^\beta$, debemos exponenciar los límites inferior y superior del IC para el parámetro $\beta$. -->
+Para calcular un intervalo de confianza al 95% de $e^\beta$, debemos exponenciar los límites inferior y superior del IC para el parámetro $\beta$.
 
-```{r, include=FALSE, message=FALSE}
+```{r, include=FALSE, message=TRUE}
 IC.beta <- confint(modelo2)[2,]
 IC.beta
 
@@ -167,39 +145,64 @@ IC.OR <- exp(IC.beta)
 IC.OR
 ```
 
-<!-- Es decir, con un nivel de confianza del 95%, por cada incremento de 1 cm en la anchura del caparazón el odds estimado crece entre 1.36 y 2.05 veces (o lo que es lo mismo, crece entre un 35% y un 105%). -->
+Es decir, con un nivel de confianza del 95%, por cada incremento de 1 cm en la anchura del caparazón el odds crece entre 1.36 y 2.05 veces (o lo que es lo mismo, crece entre un 35% y un 105%).
 
-### 10. ¿Cuáles son las predicciones de la proporción de satélites para cada valor de la anchura observada?¿Y el número esperado de satélites por hembra?
 
-```{r, include=FALSE}
-data.pred <- data.frame(anchura=cangrejos$anchura,
-                        prop=cangrejos$prop,
-                        prop.pred=fitted(modelo2),
-                        satelite=cangrejos$satelites,
-                        satelite.pred=fitted(modelo2)*cangrejos$total)
-data.pred
+### 8. ¿Cuáles son las predicciones de la proporción de satélites para cada valor de la anchura observada?¿Y el número esperado de satélites por hembra?
+
+```{r, include=TRUE}
+cangrejos.pred <- data.frame(cangrejos,
+                             prop.pred=fitted(modelo2),
+                             satelite.pred=fitted(modelo2)*cangrejos$total)
+cangrejos.pred
 ```
 
-### 11. Representa gráficamente las proporciones observadas y las predicciones lineales y logísticas de las proporciones de satélites por cada anchura del caparazón.
+### 9. Representa gráficamente las proporciones observadas y las predicciones lineales y logísticas de las proporciones de satélites por cada anchura del caparazón.
 
-```{r, include=FALSE}
-plot(cangrejos$anchura, cangrejos$prop, xlab="Anchura (cm)", ylab="Prop", ylim=c(-0.1,1.1),
-     main="Modelo regresión logística")
+```{r, include=TRUE}
+plot(cangrejos$anchura, cangrejos$prop, xlab="Anchura (cm)", ylab="Prop", main="Modelo regresión logística")
 abline(h=c(0,1), lty=2)
 abline(modelo1, col="red", lwd=2)
-lines(data.pred$anchura, data.pred$prop.pred, col="blue", lwd=2)
-legend(27, 0.3, legend=c("Modelo lineal","Regresión logística"), col=c("red", "blue"), lwd=2, bty="n")
+lines(cangrejos$anchura, fitted(modelo2), col="blue", lwd=2)
+```
+### 10. ¿Cuál es la tasa incremental de cambio a los 26 cm? ¿Qué significa?
+
+La tasa incremental de cambio en un punto $x$ se calcula como $$\hat{\beta}*\hat{\pi}(x)*(1-\hat{\pi}(x))$$
+
+Para una anchura de $x=26$ cm su valor es:
+
+```{r, include=TRUE}
+beta <- coef(modelo2)[2]
+hat.prop <- predict(modelo2, newdata=data.frame(anchura=26), type="response")
+
+beta*hat.prop*(1-hat.prop)
 ```
 
-### 12. Calcula la proporció estimada de cangrejos satélite para una hembra con anchura de caparazón de 28 cm. Calcula e interpreta un intervalo de confianza al 95% para la proporción verdadera.
+También se puede calcular mediante la función `tasa.incremental()`
 
-```{r, include=FALSE}
-data.pred <- data.frame(anchura=28)
-data.pred <- cbind(data.pred,
-                   predict(modelo2, data.pred, type="link", se.fit=TRUE))
-data.pred
+```{r, include=TRUE}
+source("tasa.incremental.R")
+tasa.incremental(modelo2, 26, 27, decimales=4)
+```
 
-## Intervalo de confianza para el logit
+**Interpretación:** Cuando la anchura del caparazón aumenta de 26 a 27 cm, la proporción de satélites por hembra aumenta en `r round(beta*hat.prop*(1-hat.prop),4)`.
+
+### 11. ¿Cuál es la tasa incremental de cambio de probabilidad para pasar de 23 a 24 cm en la anchura del caparazón? ¿Y de 25 a 26 cm? ¿Qué significan?
+
+```{r, include=TRUE}
+tasa.incremental(modelo2, 23, 24, decimales=4)
+tasa.incremental(modelo2, 25, 26, decimales=4)
+```
+
+### 12. Calcula la proporción estimada de cangrejos satélite para una hembra con anchura de caparazón de 28 cm. Calcula e interpreta un intervalo de confianza al 95% para la proporción verdadera.
+
+```{r, include=TRUE}
+# Proporción estimada para x=28 cm #
+predict(modelo2, newdata=data.frame(anchura=28), type="response")
+
+# Intervalo de confianza para el logit #
+data.pred <- predict(modelo2, newdata=data.frame(anchura=28), type="link", se=TRUE)
+
 alpha <- 0.05
 lim.inf <- data.pred$fit-qnorm(1-alpha/2)*data.pred$se.fit
 lim.sup <- data.pred$fit+qnorm(1-alpha/2)*data.pred$se.fit
@@ -207,7 +210,7 @@ IC.logit <- c(lim.inf,lim.sup)
 IC.logit
 
 ## Intervalo de confianza para la probabilidad
-IC.prob <- c(plogis(lim.inf),plogis(lim.sup))
+IC.prob <- plogis(IC.logit)
 IC.prob
 ```
 
