--- a/Practica7.qmd
+++ b/Practica7.qmd
@@ -41,48 +41,46 @@ print(diu)
 
 ### 1.2. Estima la función de supervivencia $S(t)$ por Kaplan-Meier. Calcula los errores estándar y proporciona un I.C. al 95% para $S(t)$.
 
-```{r, include=FALSE}
+```{r, include=TRUE}
 library(survival)
 
-## Intervalo de confianza "curva +- error estandar" ##
-diu.surv1 <- survfit(Surv(time,status)~1, diu, conf.type="plain")
+## Intervalo de confianza con la transformación logística (por defecto) ##
+diu.surv1 <- survfit(Surv(time,status)~1, diu)
 summary(diu.surv1)
 
-## Intervalo de confianza con la transformación clog-log ##
-diu.surv2 <- survfit(Surv(time,status)~1, diu, conf.type="log-log")
+## Intervalo de confianza asumiendo normalidad ##
+diu.surv2 <- survfit(Surv(time,status)~1, diu, conf.type="plain")
 summary(diu.surv2)
 
-## Intervalo de confianza con la transformación logística (por defecto) ##
-diu.surv3 <- survfit(Surv(time,status)~1, diu)
+## Intervalo de confianza con la transformación clog-log ##
+diu.surv3 <- survfit(Surv(time,status)~1, diu, conf.type="log-log")
 summary(diu.surv3)
 ```
 
 ### 1.3. Dibuja la función de supervivencia estimada con su correspondiente intervalo de confianza.
 
-```{r, include=FALSE}
+```{r, include=TRUE}
 plot(diu.surv1, col="red", main="Función supervivencia por Kaplan-Meier", xlab="Tiempo (semanas)")
 lines(diu.surv2, col="blue")
 lines(diu.surv3, col="black")
-legend("bottomleft", c("Surv1","Surv2","Surv3"), col=c("red","blue","black"), lty=2, bty="n")
+legend("bottomleft", c("logistica","normal","log-log"), col=c("red","blue","black"), lty=1)
 ```
 
 ### 1.4. ¿Cuál es la probabilidad de que el tiempo de uso del dispositivo supere las 19 semanas? Proporciona los correspondientes intervalos de confianza al 95% e interpreta su significado.
 
-```{r, include=FALSE}
-aux <- summary(diu.surv3)[c("time","n.risk","n.event","surv","std.err","lower","upper")]
-aux <- as.data.frame(aux)
-aux[aux$time=="19",]
+```{r, include=TRUE}
+summary(diu.surv1, times=19)
 ```
 
-<!-- **INTERPRETACIÓN**: La probabilidad de que el tiempo de uso del dispositivo supere las 19 semanas es de `r round(aux[aux$time=="19","surv"],4)` con un intervalo de confianza al 95\% de $[`r round(aux[aux$time=="19","lower"],4)`, `r round(aux[aux$time=="19","upper"],4)`]$. -->
+**INTERPRETACIÓN**: La probabilidad estimada de que una mujer no tenga hemorragias y continúe con el uso del DIU al menos hasta la semana 19 (o dicho de otra manera, de que el tiempo de uso del dispositivo supere las 19 semanas) es de 0.881, con un intervalo de confianza al 95% de [0.739, 1.000].
 
 ### 1.5. ¿A partir de qué semana la supervivencia es menor al 80%?
 
-```{r, include=FALSE}
-summary(diu.surv3)
+```{r, include=TRUE}
+summary(diu.surv1)
 ```
 
-<!-- A partir de la semana 36 la supervivencia es menor al 80%. Sin embargo, mirando el intervalo de confianza vemos que no contiene al 0.8 a partir de la semana 97. -->
+A partir de la semana 36 la supervivencia es menor al 80%. Sin embargo, mirando el intervalo de confianza vemos que no contiene el valor 0.8 a partir de la semana 97.
 
 
 ## Ejercicio 2
@@ -104,95 +102,93 @@ str(colon)
 
 ### 1.1. Estima curvas de supervivencia por el método de Kaplan y Meier para los distintos grupos del tratamiento. ¿Crees que existen diferencias entre las curvas?
 
-```{r, include=FALSE}
-colon.surv <- survfit(Surv(time, status) ~ rx, data=colon)
+```{r, include=TRUE}
+surv1 <- survfit(Surv(time, status) ~ rx, data=colon)
 
-plot(colon.surv, col=c(1,2,3), lwd=2, main="Curvas de supervivencia KM")
-legend("bottomleft", levels(colon$rx), col=c(1,2,3), lwd=2, bty="n")
+plot(surv1, col=c("red","green","blue"))
+legend("bottomleft", levels(colon$rx), col=c("red","green","blue"), lty=1)
 ```
 
-<!-- La curva de supervivencia correspondiente al tratamiento "Lev+5FU" está consistentemente por encima de las otras dos curvas ("Lev" y "Lev+5FU"), por lo que el pronóstico de supervivencia es mejor en este grupo que en el resto. Sin embargo, parece no observarse diferencias entre las curvas de supervivencia de los grupos "Lev" y "Obs". -->
+La curva de supervivencia correspondiente al tratamiento "Lev+5FU" está consistentemente por encima de las otras dos curvas ("Lev" y "Lev+5FU"), por lo que el pronóstico de supervivencia es mejor en este grupo que en el resto. Sin embargo, parece no observarse diferencias entre las curvas de supervivencia de los grupos "Lev" y "Obs".
 
 ### 1.2. Comprueba si las diferencias observadas en las curvas son o no estadísticamente significativas utilizando el test de Log-Rank y el test de Peto-Peto.
 
-<!-- Test Log-Rank -->
+**Test Log-Rank**
 
-<!-- ```{r, include=FALSE} -->
-<!-- survdiff(Surv(time,status)~rx, colon)  -->
-<!-- ``` -->
+```{r, include=TRUE}
+survdiff(Surv(time,status)~rx, colon)
+```
 
-<!-- Test Peto-Peto -->
+**Test Peto-Peto**
 
-<!-- ```{r, include=FALSE} -->
-<!-- survdiff(Surv(time,status)~rx, rho=1, colon) -->
-<!-- ``` -->
+```{r, include=TRUE}
+survdiff(Surv(time,status)~rx, rho=1, colon)
+```
 
-<!-- En ambos casos, rechazamos la hipótesis nula de que las curvas de superviviencia KM son iguales para los tres grupos. -->
+En ambos casos, rechazamos la hipótesis nula de que las curvas de superviviencia KM son iguales para los tres grupos.
 
 ### 1.3. ¿Cuál es la probabilidad que un individuo del grupo "Lev+5FU" viva más de 127 días? Proporciona un intervalo de confianza al 95% para dicha probabilidad.
 
-```{r, include=FALSE}
-aux <- summary(colon.surv)[c("strata","time","n.risk","n.event","surv","std.err","lower","upper")]
-aux <- as.data.frame(aux)
-aux <- aux[aux$strata=="rx=Lev+5FU",]
-aux[aux$time=="127",]
+```{r, include=TRUE}
+summary(surv1, times=127)
 ```
 
-<!-- **INTERPRETACIÓN**: La probabilidad de que un individuo del grupo "Lev+5FU" viva más de 127 días es de `r round(aux[aux$time=="127","surv"],4)` con un intervalo de confianza al 95\% de $[`r round(aux[aux$time=="127","lower"],4)`, `r round(aux[aux$time=="127","upper"],4)`]$. -->
+**INTERPRETACIÓN**: La probabilidad de que un individuo del grupo "Lev+5FU" viva más de 127 días es de 0.980 con un intervalo de confianza al 95\% de [0.965, 0.996].
 
 ### 1.4. Estima curvas de supervivencia por el método de Kaplan y Meier según el sexo. ¿Crees que existen diferencias entre las curvas?
 
-```{r, include=FALSE}
-colon.surv2 <- survfit(Surv(time, status) ~ sex, data=colon)
+```{r, include=TRUE}
+surv2 <- survfit(Surv(time, status) ~ sex, data=colon)
+
+plot(surv2, col=c("red","green"))
+legend("bottomleft", c("Mujer","Hombre"), col=c("red","green"), lty=1)
 
 survdiff(Surv(time,status)~sex, colon) 
-
-plot(colon.surv2, col=c(1,2,3), lwd=2, main="Curvas de supervivencia KM")
-legend("bottomleft", c("Male","Female"), col=c(1,2,3), lwd=2, bty="n")
 ```
 
 ### 1.5. Estima curvas de supervivencia por el método de Kaplan y Meier según si el tumor se diferencia bien, moderadamente o mal. ¿Crees que existen diferencias entre las curvas?
 
-```{r, include=FALSE}
-colon.surv3 <- survfit(Surv(time, status) ~ differ, data=colon)
+```{r, include=TRUE}
+surv3 <- survfit(Surv(time, status) ~ differ, data=colon)
+
+plot(surv3, col=c("red","green","blue"))
+legend("bottomleft", c("Bien","Moderadamente","Mal"), col=c("red","green","blue"), lty=1)
 
 survdiff(Surv(time,status)~differ, colon) 
-
-plot(colon.surv3, col=c(1,2,3), lwd=2, main="Curvas de supervivencia KM")
-legend("bottomleft", c("Bien","Moderadamente","Mal"), col=c(1,2,3), lwd=2, bty="n")
 ```
 
 ### 1.6. Estima curvas de supervivencia por el método de Kaplan y Meier según la extensión del tumor. ¿Crees que existen diferencias entre las curvas?
 
-```{r, include=FALSE}
-colon.surv4 <- survfit(Surv(time, status) ~ extent, data=colon)
+```{r, include=TRUE}
+surv4 <- survfit(Surv(time, status) ~ extent, data=colon)
+
+plot(surv4, col=c("red","green","blue","orange"))
+legend("bottomleft", c("submucosa","músculo","serosa","estruc. contiguas"),
+       col=c("red","green","blue","orange"), lty=1)
 
 survdiff(Surv(time,status)~extent, colon) 
-
-plot(colon.surv4, col=c(1,2,3,4), lwd=2, main="Curvas de supervivencia KM")
-legend("bottomleft", c("submucosa","músculo","serosa","estructuras contiguas"), col=c(1,2,3,4), lwd=2, bty="n")
 ```
 
 ### 1.7. Estima curvas de supervivencia por el método de Kaplan y Meier a partir de los siguientes valores de la variable edad: grupo 1 \[18,45\], grupo 2 (45,65\] y grupo 3 (65,+\]. ¿Crees que existen diferencias entre las curvas?
 
-<!-- En primer lugar definimos la nueva variable: -->
+En primer lugar definimos la nueva variable:
 
-```{r, include=FALSE}
+```{r, include=TRUE}
 colon$grupo <- cut(colon$age, include.lowest=TRUE, right=TRUE,
                    breaks=c(18,45,65,max(colon$age)),
                    labels=c("grupo 1","grupo 2","grupo 3"))
 summary(colon$grupo)
 ```
 
-<!-- A continuación, estimamos las curvas de supervivencia por el método KM y comprobamos si existen diferencias significativas entre los grupos de edad: -->
+A continuación, estimamos las curvas de supervivencia por el método KM y comprobamos si existen diferencias significativas entre los grupos de edad:
 
-```{r, include=FALSE}
-colon.surv5 <- survfit(Surv(time, status) ~ grupo, data=colon)
+```{r, include=TRUE}
+surv5 <- survfit(Surv(time, status) ~ grupo, data=colon)
+
+plot(surv5, col=c("red","green","blue"))
+legend("bottomleft", levels(colon$grupo), col=c("red","green","blue"), lty=1)
 
 survdiff(Surv(time,status)~grupo, colon) 
-
-plot(colon.surv5, col=c(1,2,3), lwd=2, main="Curvas de supervivencia KM")
-legend("bottomleft", c("[18,45] años","(45,65] años","(65,+] años"), col=c(1,2,3), lwd=2, bty="n")
 ```
 
 ## Para entregar
