--- a/README.qmd
+++ b/README.qmd
@@ -15,7 +15,7 @@ format: gfm
 | 17-noviembre | [Práctica 5: Asociación. Riesgos relativos y Odds Ratio](./Practica5.html)       |
 | 26-noviembre | [Práctica 6: Regresión logística](./Practica6.html)          |
 | 15-diciembre | [Práctica 7: Análisis de supervivencia](./Practica7.html)    |
-| 17-diciembre | Práctica repaso                                              |
+| 17-diciembre | [Práctica repaso](./PracticaRepaso.html)                     |
 
 ## Bibliografía {style="color: black"}
 
